--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ a {
 
 .menu {
     display: flex;
-    width: 1320px;
     align-items: center;
+    justify-content: space-around;
 }
 
 /* Search box - NEED TO MAKE RESPONSIVE */
@@ -146,6 +146,8 @@ main {
  .byline, .reading-time {
     text-align: center;
 }
+
+
 
 h3 {
     font-size: 26px;
