--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,35 @@ h4 {
     float: right;
 }
 
+/* PAGINATION */
+
+.center {
+    text-align: center;
+}
+
+.pagination {
+    display: inline-block;
+}
+
+.pagination a {
+    font-size: 26px;
+    color: #AEAEAE;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    margin: 0 4px;
+}
+
+.pagination a.active {
+    color: #000000;
+}
+
+.older {
+margin-right: 370px !important;
+}
+
+.newer {
+margin-left: 370px !important;
+}
+
