--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ h4 {
 
 .center {
     text-align: center;
+    margin-top: 60px;
 }
 
 .pagination {
@@ -203,3 +204,40 @@ margin-right: 370px !important;
 margin-left: 370px !important;
 }
 
+/* FOOTER */
+
+footer {
+    background-color: #000000;
+}
+
+.flex-grid {
+  display: flex;
+}
+.col {
+  flex: 1;
+}
+
+.footer-title-container {
+    margin-top: 90px;
+    margin-left: 200px;
+}
+
+#footer-title {
+    color: #FFFFFF;
+    font-size: 90px;
+    margin-bottom: 0;
+    line-height: 50%;
+}
+
+#footer-subtitle {
+    color: #AEAEAE;
+    font-size: 44px;
+    margin-bottom: 0;
+}
+
+#copyright {
+    margin-top: 70px;
+    font-family: 'Futura', Helvetica;
+    font-size: 12px;
+    color: #FFFFFF;
+}
