--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,9 @@ margin-left: 370px !important;
 
 footer {
     background-color: #000000;
+    padding-bottom: 25px;
+    margin-top: 60px;
+    
 }
 
 .flex-grid {
