--- a/css/style.css
+++ b/css/style.css
@@ -276,3 +276,29 @@ footer {
     color: #FFFFFF;
 }
 
+/* RESPONSIVE */
+
+@media only screen 
+and (max-width: 1300px) {
+
+   .menu li:first-of-type {
+    margin-left: 10px;
+}
+
+a {
+    margin-right: 10px;
+}
+
+.my-row {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.card:first-of-type {
+    margin-bottom: 40px;
+}
+
+}
+
