--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ a {
     justify-content: space-around;
 }
 
+
 /* Search box - NEED TO MAKE RESPONSIVE */
 
 input[type="search"] {
@@ -118,6 +119,10 @@ input[type="search"] {
 
 .fa-search {
     color: #979797;
+}
+
+.hamburger, .cross {
+    display: none;
 }
 
 /* Main content */
@@ -276,6 +281,8 @@ footer {
     color: #FFFFFF;
 }
 
+
+
 /* RESPONSIVE */
 
 @media only screen 
@@ -321,5 +328,79 @@ margin-left: 100px;
     margin-top: 110px;
 }
 
+.line {
+    display: none;
 }
 
+.menu {
+    justify-content: center;
+}
+
+.menu ul {
+    margin-top: 40px;
+}
+
+.search-container {
+margin-left: 60px;
+margin-top: 50px;
+}
+
+
+}
+
+
+
+
+
+@media only screen and (max-width: 700px) {
+
+
+.menu ul {
+    display: none;
+}
+
+.hamburger{ 
+  display: inline-block;
+  background:none;
+  position:absolute;
+  top:0;
+  right:0;
+  line-height:45px;
+  padding:5px 15px 0px 15px;
+  color:#999;
+  border:0;
+  font-size:1.4em;
+  font-weight:bold;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+
+.cross{
+  display: inline-block;
+  background:none;
+  position:absolute;
+  top:0px;
+  right:0;
+  padding:7px 15px 0px 15px;
+  color:#999;
+  border:0;
+  font-size:3em;
+  line-height:65px;
+  font-weight:bold;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+
+.responsive-menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:100%; background:#f1f1f1;  position:absolute; text-align:center; font-size:12px;}
+.responsive-menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
+.responsive-menu li {display: block;   padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
+.responsive-menu li:hover{display: block;    background:#ffffff; padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
+.responsive-menu ul li a { text-decoration:none;  margin: 0px; color:#666;}
+.responsive-menu ul li a:hover {  color: #666; text-decoration:none;}
+.responsive-menu a{text-decoration:none; color:#666;}
+.responsive-menu a:hover{text-decoration:none; color:#666;}
+
+
+}
